conditionals are more natural

--- a/src/index.md.j2
+++ b/src/index.md.j2
@@ -2,8 +2,8 @@
 
 Hi! What operating system do you use?
 
-{{ choice("Operating System", "o") }}
+{{ choice("Operating System", "os") }}
 
-- {{ choose("Windows", "start2.md", "o", "w") }}
-- {{ choose("Linux", "start2.md", "o", "l") }}
-- {{ choose("MacOS", "start2.md", "o", "m") }}
+- {{ choose("os", "Windows", "start2.md") }}
+- {{ choose("os", "Linux", "start2.md") }}
+- {{ choose("os", "MacOS", "start2.md") }}
