--- a/src/start2.md.j2
+++ b/src/start2.md.j2
@@ -1,6 +1,6 @@
 Are you an expert or a beginner?
 
-{{ choice("Skill level", "s") }}
+{{ choice("Skill level", "skill") }}
 
-- {{ choose("Expert", "start3.md", "s", "e") }}
-- {{ choose("Beginner", "start3.md", "s", "b") }}
+- {{ choose("skill", "Expert", "start3.md", "e") }}
+- {{ choose("skill", "Beginner", "start3.md", "b") }}
