get rid of distracting 'expert' question

--- a/src/start2.md.j2
+++ b/src/start2.md.j2
@@ -1,6 +1,6 @@
-Are you an expert or a beginner?
+Do you like lots of details, or do you just want instructions?
 
-{{ choice("Skill level", "skill") }}
+{{ choice("Depth", "depth") }}
 
-- {{ choose("skill", "Expert", "start3.md", "e") }}
-- {{ choose("skill", "Beginner", "start3.md", "b") }}
+- {{ choose("depth", "Details", "start3.md", "d") }}
+- {{ choose("depth", "Instructions", "start3.md", "i") }}
