--- a/src/start3.md.j2
+++ b/src/start3.md.j2
@@ -9,8 +9,9 @@ consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur.
 
 This is about Windows!
 
-{% if skill == "e" %}
-Since you are an expert, let's talk about all the details.
+{% if depth == "d" %}
+Here are all of the details: lorem ipsum quia dolor sit amet consectetur
+adipisci velit, sed quia non numquam eius modi tempora incidunt.
 {% endif %}
 
 {% elif os == "Linux" %}
