use question/option terminology instead of choice/choose

--- a/src/start2.md.j2
+++ b/src/start2.md.j2
@@ -1,6 +1,6 @@
 Do you like lots of details, or do you just want instructions?
 
-{{ choice("Depth", "depth") }}
+{{ question("Depth", "depth") }}
 
-- {{ choose("depth", "Details", "start3.md", "d") }}
-- {{ choose("depth", "Instructions", "start3.md", "i") }}
+- {{ option("depth", "Details", "start3.md", "d") }}
+- {{ option("depth", "Instructions", "start3.md", "i") }}
