--- a/src/index.md.j2
+++ b/src/index.md.j2
@@ -2,8 +2,8 @@
 
 Hi! What operating system do you use?
 
-{{ choice("Operating System", "os") }}
+{{ question("Operating System", "os") }}
 
-- {{ choose("os", "Windows", "start2.md") }}
-- {{ choose("os", "Linux", "start2.md") }}
-- {{ choose("os", "MacOS", "start2.md") }}
+- {{ option("os", "Windows", "start2.md") }}
+- {{ option("os", "Linux", "start2.md") }}
+- {{ option("os", "MacOS", "start2.md") }}
