use value=, more convenient

--- a/src/index.md.j2
+++ b/src/index.md.j2
@@ -4,6 +4,6 @@ Hi! What operating system do you use?
 
 {{ question("Operating System", "os") }}
 
-- {{ option("os", "Windows", "start2.md") }}
-- {{ option("os", "Linux", "start2.md") }}
-- {{ option("os", "MacOS", "start2.md") }}
+- {{ option("os", "Windows", "start2.md", value="win") }}
+- {{ option("os", "Linux", "start2.md", value="linux") }}
+- {{ option("os", "MacOS", "start2.md", value="mac") }}
