--- a/src/start2.md.j2
+++ b/src/start2.md.j2
@@ -2,5 +2,5 @@ Do you like lots of details, or do you just want instructions?
 
 {{ question("Depth", "depth") }}
 
-- {{ option("depth", "Details", "start3.md", "d") }}
-- {{ option("depth", "Instructions", "start3.md", "i") }}
+- {{ option("depth", "Details", "start3.md", value="d") }}
+- {{ option("depth", "Instructions", "start3.md", value="i") }}
