--- a/src/start3.md.j2
+++ b/src/start3.md.j2
@@ -5,7 +5,7 @@ suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel
 eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae
 consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur.
 
-{% if os == "Windows" %}
+{% if os == "win" %}
 
 This is about Windows!
 
@@ -14,11 +14,11 @@ Here are all of the details: lorem ipsum quia dolor sit amet consectetur
 adipisci velit, sed quia non numquam eius modi tempora incidunt.
 {% endif %}
 
-{% elif os == "Linux" %}
+{% elif os == "linux" %}
 
 This is about Linux!
 
-{% elif os == "MacOS" %}
+{% elif os == "mac" %}
 
 This is about Mac.
 
