more readable page slugs

--- a/src/cant-import.md.j2
+++ b/src/cant-import.md.j2
@@ -6,6 +6,6 @@ What operating system are you using?
 
 {{ question("Operating System", "os") }}
 
-- {{ option("os", "Windows", "cant-import2.md") }}
-- {{ option("os", "Linux", "cant-import2.md") }}
-- {{ option("os", "MacOS", "cant-import2.md") }}
+- {{ option("os", "Windows", "cant-import2.md", value="w") }}
+- {{ option("os", "Linux", "cant-import2.md", value="l") }}
+- {{ option("os", "MacOS", "cant-import2.md", value="m") }}
