--- a/examples/ci-fix-vscode.md.j2
+++ b/examples/ci-fix-vscode.md.j2
@@ -1,3 +1,5 @@
+{% extends "base.md.j2" %}
+{% block content %}
 {% if num_pythons == "one" %}
 
 TODO: Write stuff for when there is just one Python.
@@ -17,3 +19,5 @@ on the bottom-most bar in the editor, and selecting the latest (that is, the
 highest version) Python interpreter from the list.
 
 {% endif %}
+
+{% endblock %}
