--- a/examples/ci-pycharm.md.j2
+++ b/examples/ci-pycharm.md.j2
@@ -1,3 +1,5 @@
+{% extends "base.md.j2" %}
+{% block content %}
 OK, you're using PyCharm.
 
 Where did you run the `pip install` command?
@@ -6,3 +8,5 @@ Where did you run the `pip install` command?
 
 - {{ option("install", "Inside PyCharm", "ci-install-in-pycharm.md") }}
 - {{ option("install", "A terminal window", "ci-install-in-terminal.md") }}
+
+{% endblock %}
