--- a/examples/start3.md.j2
+++ b/examples/start3.md.j2
@@ -1,3 +1,5 @@
+{% extends "base.md.j2" %}
+{% block content %}
 lorem ipsum quia dolor sit amet consectetur adipisci velit, sed quia non numquam
 eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat
 voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis
@@ -32,3 +34,5 @@ voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis
 suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel
 eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae
 consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur.
+
+{% endblock %}
